force-app/main/default/objects/PRM_Training_and_Events__c/PRM_Training_and_Events__c.object-meta.xml
<CustomObject>
    <description>Training and Event data displayed on the PRM Homepage.</description>
    <label>PRM Training and Events</label>
    <nameField>
        <label>PRM Training and Events Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PRM Training and Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>