force-app/main/default/objects/PRM_Training_and_Events__c/fields/Date_Display__c.field-meta.xml
<CustomField>
    <fullName>Date_Display__c</fullName>
    <description>How the date or dates for the event should be displayed on the PRM homepage portal.</description>
    <inlineHelpText>How the date or dates for the event should be displayed on the PRM homepage portal.</inlineHelpText>
    <label>Date Display</label>
    <length>100</length>
    <type>Text</type>
</CustomField>