force-app/main/default/objects/PRM_Training_and_Events__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The event or training description.  This will be displayed to users who visit this record directly by clicking on the name of the object in the PRM homepage.</description>
    <inlineHelpText>The event or training description.  This will be displayed to users who visit this record directly by clicking on the name of the object in the PRM homepage.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>