force-app/main/default/objects/PRM_Training_and_Events__c/fields/External_URL__c.field-meta.xml
<CustomField>
    <fullName>External_URL__c</fullName>
    <description>A url external to Salesforce to direct users to if they click on the name of the event in the PRM homepage.  If no value is provided, the link will direct the users to this record.</description>
    <inlineHelpText>A url external to Salesforce to direct users to if they click on the name of the event in the PRM homepage.  If no value is provided, the link will direct the users to this record.</inlineHelpText>
    <label>Externald URL</label>
    <type>Url</type>
</CustomField>