force-app/main/default/objects/PRM_Training_and_Events__c/fields/Html__c.field-meta.xml
<CustomField>
    <fullName>Html__c</fullName>
    <description>Data entered in this field will be added verbatim to the PRM homepage training section.  No html escaping is done.  Use this option with caution, as style changes or invalid HTML may affect other page elements.</description>
    <inlineHelpText>Data entered in this field will be added verbatim to the PRM homepage training section.  No html escaping is done.  Use this option with caution, as style changes or invalid HTML may affect other page elements.</inlineHelpText>
    <label>Html</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>