force-app/main/default/objects/PRM_Training_and_Events__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <description>The image pointed to will be displayed in the browser, and hyperlinked to External_Url__c.</description>
    <inlineHelpText>The image pointed to will be displayed in the browser, and hyperlinked to External_Url__c.</inlineHelpText>
    <label>Image</label>
    <type>Url</type>
</CustomField>