force-app/main/default/objects/PRM_Training_and_Events__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>The location to display on the PRM homepage, if any.</description>
    <inlineHelpText>The location to display on the PRM homepage, if any.</inlineHelpText>
    <label>Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>