force-app/main/default/objects/PRM_Training_and_Events__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>The order in which PRM Training and Events objects will be displayed to users on the PRM homepage.  Remove this value to remove items from the homepage.  If there are multiple objects displayed, they will be sorted by this value.</description>
    <inlineHelpText>The order in which PRM Training and Events objects will be displayed to users on the PRM homepage.  Remove this value to remove items from the homepage.  If there are multiple objects displayed, they will be sorted by this value.</inlineHelpText>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>