force-app/main/default/objects/PRM_Training_and_Events__c/fields/Use_Description__c.field-meta.xml
<CustomField>
    <fullName>Use_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to display the contents of the Description field on the PRM homepage.</description>
    <inlineHelpText>Check this box to display the contents of the Description field on the PRM homepage.</inlineHelpText>
    <label>Use Description</label>
    <type>Checkbox</type>
</CustomField>