force-app/main/default/objects/PRM_Training_and_Events__c/fields/Use_Html__c.field-meta.xml
<CustomField>
    <fullName>Use_Html__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to display the contents of the Html field on the PRM homepage.</description>
    <inlineHelpText>Check this box to display the contents of the Html field on the PRM homepage.</inlineHelpText>
    <label>Use Html</label>
    <type>Checkbox</type>
</CustomField>