force-app/main/default/objects/PRM_Training_and_Events__c/fields/Use_Image__c.field-meta.xml
<CustomField>
    <fullName>Use_Image__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to display the contents of the Image field on the PRM homepage.</description>
    <inlineHelpText>Check this box to display the contents of the Image field on the PRM homepage.</inlineHelpText>
    <label>Use Image</label>
    <type>Checkbox</type>
</CustomField>